--- a/css/style.css
+++ b/css/style.css
@@ -1640,9 +1640,9 @@ form label {
   border-bottom: none !important;
 }
 @media screen and (max-width: 768px) {
-  .fh5co-nav-toggle {
+  /* .fh5co-nav-toggle {
     display: block;
-  }
+  } */
 }
 
 .btn {
