--- a/css/style.css
+++ b/css/style.css
@@ -1017,6 +1017,16 @@ form label {
   }
 }
 
+#fh5co-cover {
+  padding: 14em 0;
+  clear: both;
+}
+@media screen and (max-width: 768px) {
+  #fh5co-cover {
+    padding: 14em 0;
+  }
+}
+
 .fh5co-section-gray {
   background: rgba(0, 0, 0, 0.04);
 }
@@ -1839,6 +1849,76 @@ form label {
 
 .js .animate-box {
   opacity: 0;
+}
+
+@import "compass/reset";
+@import "compass/css3";
+@import "compass/css3/border-radius";
+@import "compass/css3/transform";
+
+/* body, html {
+  height: 100%;
+} */
+
+.content, .modal {
+  position: absolute;
+  top:0;
+  left:0;
+  height:100%;
+  width: 100%;
+}
+
+.content {
+  background-color: orange;
+  z-index:100;
+}
+
+.modal {
+  z-index:101;
+  background-color: #000;
+  visibility: hidden;
+  opacity: 0;
+	transition: opacity 0.5s, visibility 0s 0.5s;
+  position: fixed;
+  z-index: 2000;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  background-color: transparent;
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  transform: translateY(0);
+}
+
+.modal.active {
+  	opacity: 1;
+  	visibility: visible;
+  	transition: opacity 0.5s;
+}
+
+
+
+.modalx {
+  position: fixed;
+  z-index: 2000;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  background-color: transparent;
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  transform: translateY(0);
+  background-color: #FFFFFF;
+}
+
+.modalx.active {
+  visibility: hidden;
+  opacity: 0;
+	transition: opacity 0.5s, visibility 0s 1s;
 }
 
 /*# sourceMappingURL=style.css.map */
